fix: publisher name

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "file-creator",
 	"displayName": "File Creator",
 	"description": "Easily Create Files Using Templates",
-	"publisher": "AhmadKarimzade",
+	"publisher": "ahmadkzx",
 	"license": "MIT",
 	"icon": "icon.png",
 	"version": "1.0.0",
