feat: Added the combined output function

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 	],
 	"activationEvents": [
 		"onCommand:file-creator.custom",
+		"onCommand:file-creator.combine",
 		"onCommand:file-creator.vue.component",
 		"onCommand:file-creator.vue.store",
 		"onCommand:file-creator.vue.router",
@@ -95,6 +96,10 @@
 			{
 				"title": "Custom",
 				"command": "file-creator.custom"
+			},
+			{
+				"title": "Combine",
+				"command": "file-creator.combine"
 			}
 		],
 		"menus": {
@@ -110,6 +115,9 @@
 				},
 				{
 					"command": "file-creator.custom"
+				},
+				{
+					"command": "file-creator.combine"
 				},
 				{
 					"submenu": "file-creator-js"
@@ -188,6 +196,10 @@
 			{
 				"label": "Graphql",
 				"id": "file-creator-graphql"
+			},
+			{
+				"label": "Combine",
+				"id": "file-creator-combine"
 			}
 		]
 	},
